--- a/Web/index.html
+++ b/Web/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	<script src="javascript/main.js"></script>
 
 </head>
 
@@ -170,7 +171,7 @@
 		<div class="navigation">
 			<img src="images/prev_arrow.png" alt="Previous Arrow" />
 			<div id="page_number">1/3</div>
-			<img src="images/next_arrow.png" alt="next Arrow" />
+			<img src="images/next_arrow.png" alt="Next Arrow" />
 		</div>
 	</div>
 </body>
