--- a/Web/index.html
+++ b/Web/index.html
@@ -168,6 +168,7 @@
 	<div class="sidebar">
 		<h1>Sidebar</h1>
 		<div>This will hold the information Patrick cannot live without.</div>
+		<button id="recall">Recall</button>
 		<div class="navigation">
 			<img src="images/prev_arrow.png" alt="Previous Arrow" />
 			<div id="page_number">1/3</div>
