--- a/Web/index.html
+++ b/Web/index.html
@@ -1,8 +1,5 @@
-
 <!Doctype html>
-
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<title>Chef Queue</title>
@@ -10,171 +7,9 @@
 
 	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	<script src="javascript/main.js"></script>
-
 </head>
 
 <body>
-	<div class="header">
-		<span>lightwait</span>
-		<a href="#">Change Availablity</a>
-	</div>
-	
-	<div class="window">
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-		
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-
-		<section class="order">
-			<h1>Order</h1>
-			<span>Matt</span>
-			<span>2:00pm</span>
-			<ul>
-				<li>Burger</li>
-				<li>Wheat</li>
-				<li>Swiss</li>
-				<li>Lettuce</li>
-				<li>Tomato</li>
-				<li>Pickle</li>
-				<li>Onion</li>
-				<li>BBQ Sauce</li>
-				<li>Fries</li>
-			</ul>
-			<button>Bump</button>
-		</section>
-	</div>
-
-	<div class="sidebar">
-		<h1>Sidebar</h1>
-		<div>This will hold the information Patrick cannot live without.</div>
-		<button id="recall">Recall</button>
-		<div class="navigation">
-			<img src="images/prev_arrow.png" alt="Previous Arrow" />
-			<div id="page_number">1/3</div>
-			<img src="images/next_arrow.png" alt="Next Arrow" />
-		</div>
-	</div>
+	<a href="queue.html">Chef</a>
 </body>
-
 </html>
